--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -4,7 +4,6 @@ version: '3.4'
 
 services:
   db:
-    hostname: banco_dados
     image: postgres
     restart: always
     environment:
@@ -23,6 +22,7 @@ services:
       - 5253:5253
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - CONNECTION_STRING="Host=db;Username=postgres;Password=found&lost;Database=foundAndLost"
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
     depends_on:
@@ -33,4 +33,5 @@ services:
 
 networks:
   backend:
+    driver: bridge
   frontend:
