--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,7 @@
             "request": "launch",
             "preLaunchTask": "docker-run: debug",
             "netCore": {
-                "appProject": "${workspaceFolder}/src/WebAPI/WebAPI.csproj"
+                "appProject": "${workspaceFolder}/src/WebAPI/WebAPI.csproj",
             }
         }
     ]
