--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbPostgres": "Host=db;Username=postgres;Password=found&lost;Database=foundAndLost"
   }
 }
