--- a/src/found-and-lost/Dockerfile
+++ b/src/found-and-lost/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+
+ENV ASPNETCORE_URLS="http://*:5000"
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
@@ -17,6 +17,12 @@ FROM build AS publish
 RUN dotnet publish "found-and-lost.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
+
+# RUN apt update && \
+#     apt install unzip && \
+#     apt install curl -y && \
+#     curl -sSL https://aka.ms/getvsdbgsh | /bin/sh /dev/stdin -v latest -l /vsdbg
+
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "found-and-lost.dll"]
